fix: page title align

--- a/src/components/Title/PageTitle.scss
+++ b/src/components/Title/PageTitle.scss
@@ -7,5 +7,10 @@
   line-height: 150%;
   letter-spacing: 1.68px;
   text-transform: uppercase;
-  margin: 72px 0 48px;
+  margin-top: 72px;
+  position: relative;
+}
+
+.center-text {
+  text-align: center;
 }
